api 수정